--- a/locations.html
+++ b/locations.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="locations.css" />
-  <title>Olyxio</title>
+  <title>Locations</title>
 </head>
 
 <body>
@@ -31,61 +31,8 @@
     </div>
   </section>
   <section class="contact-page-content">
-    <!-- <div class="america">
-      <div class="address">
-        <div class="region-box">
-          <h4>USA - Chantilly</h4>
-          <p>14150 Newbrook Drive <br>Suite 115 <br>Chantilly, VA 20151</p>
-          <p>+1-571-281-3229</p>
-          <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-        </div>
-        <div class="region-box">
-          <h4>Canada - Toronto</h4>
-          <p>2425 Matheson Blvd East <br>8th Floor <br>Mississauga, Toronto <br>Ontario, L4W 5K4</p>
-          <p>+1-905-361-6591</p>
-          <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-        </div>
-        <div class="region-box">
-          <h4>USA - Stafford</h4>
-          <p>920 FM 1092 <br># 201 <br>Stafford, TX 77477</p>
-          <p>+1-512-730-0443</p>
-          <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-        </div>
-
-      </div>
-    <aside class="location-img"><img src="materials/office-images/USAstafford.png" alt="img"></aside>
-
-    </div>
-    <div class="europe">
-      <div class="region-box">
-        <h4>UK - Salisbury</h4>
-        <p>Nunns Orchard <br>Dean Lane <br>Whiteparish <br>Salisbury, SP5 2RJ</p>
-        <p>+44-114-360-3250</p>
-        <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-      </div>
-    </div>
-    <div class="middleEast">
-      <div class="region-box">
-        <h4>UAE - Dubai</h4>
-        <p>E3-308, Dubai Silicon Oasis <br>Dubai</p>
-        <p>+971-4371-2632</p>
-        <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-      </div>
-    </div>
-    <div class="southAsia">
-      <div class="region-box">
-        <h4>UK - Salisbury</h4>
-        <p>Nunns Orchard <br>Dean Lane <br>Whiteparish <br>Salisbury, SP5 2RJ</p>
-        <p>+44-114-360-3250</p>
-        <a class="map" href="#">View Map <i class="fa fa-map-marker" aria-hidden="true"></i></a>
-      </div>
-    </div>
-    <div class="eastAsia">
-    </div>
-    <div class="oceania">
-    </div> -->
   </section>
-  <script src="olyxio.js"></script>
+  <script src="locations.js"></script>
 </body>
 
 </html>
